# devtoolbox-pro

./: .gitignore  App.tsx  BUILD_CHECKLIST.md  BUILD_SUCCESS.md  CHANGELOG.md  GIT_ROLLBACK_GUIDE.md  README.md  README_EN.md  build.bat  build_error.txt  constants.ts  debug.bat  i18n.ts  index.css  index.html  locales.ts  metadata.json  modify_layout.py  package-lock.json  package.json  tailwind.config.js  temp_rc.txt  types.ts  vite.config.ts
.github/workflows/: release.yml
components/: ConfirmModal.tsx  ContextMenu.tsx  Layout.tsx  UpdateChecker.tsx
components/shared/: DatabaseSelector.tsx  TableSelector.tsx  (+1 more)
docs/: DATA_SERVICE_API.md  DATA_SERVICE_DESIGN.md  project_structure.md
hooks/: useDatabase.ts  useLocalStorage.ts  useTables.ts
scripts/: crop_icon.cjs  fix-import-paths.ps1  fix-imports.cjs  make_icon_transparent.cjs  make_icon_transparent.js  migrate-simple-tools.ps1  setup-features.ps1
services/: database.service.ts  storage.service.ts
src-tauri/: Cargo.toml  noon_report_pro_ddl_2026-02-02_11-38-36.sql  noon_report_pro_ddl_2026-02-02_11-39-23.sql  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
store/: globalStore.ts
utils/: hoconParser.ts  http.ts
views/: DataCompareTool.tsx  DataSourceManager.tsx  DatabaseTools.tsx  DbViewer.tsx  ExcelToSql.tsx  FieldMappingTool.tsx  InterviewQuestions.tsx  Login.tsx  Notes.tsx  OfficeTools.tsx  PdfTools.tsx  SeatunnelGen.tsx  Settings.tsx  SystemMonitor.tsx  SystemTools.tsx  TimeUtility.tsx  UserProfile.tsx
(+264 files in other folders)
