[package]
name = "devtoolbox"
version = "1.0.0"
description = "DevToolbox Pro Backend"
authors = ["Developer"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
chrono = "0.4"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
dirs = "5.0"
mysql = "24.0"
calamine = "0.24"
lopdf = "0.32"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"


